# BB_self_defined_protocol

./: CMakeLists.txt  README.md  Untitled Diagram.drawio
doc/: main.tex
src/: CMakeLists.txt  main.cpp
src/Message/: AcceptMessage.hh  ConnectMessage.hh  MessageType.hh
src/Message/utility/: MessageConstructor.hh  StateMachine.hh
src/client/: CMakeLists.txt  client.cc
src/client/include/: client.hh
src/client/src/: client.cc
src/server/: CMakeLists.txt
src/server/include/: Epoller.hh  Handler.hh  Reactor.hh  Server.hh
src/server/src/: Acceptor.cc  Server.cc
uml/: sequence_dia_client.plantuml
